--- a/.gitmodules
+++ b/.gitmodules
@@ -654,3 +654,6 @@
 [submodule "blocks/assign_get_feedback"]
 	path = blocks/assign_get_feedback
 	url = git@github.com:vsotirasqmplus/moodle-block_assign_get_feedback.git
+[submodule "course/format/topics2"]
+	path = course/format/topics2
+	url = git@github.com:ULCC-QMUL/moodle-format_topics2.git
