--- a/.gitmodules
+++ b/.gitmodules
@@ -636,3 +636,6 @@
 [submodule "course/format/weeks2"]
 	path = course/format/weeks2
 	url = git@github.com:ULCC-QMUL/moodle-course_format_weeks2.git
+[submodule "report/benchmark"]
+	path = report/benchmark
+	url = git@github.com:/mikasmart/moodle-report_benchmark
