--- a/.gitmodules
+++ b/.gitmodules
@@ -411,7 +411,7 @@
 	url = git@github.com:ULCC-QMUL/moodle-theme_qmul_science.git
 [submodule "theme/ulip"]
 	path = theme/ulip
-	url = git@github.com:/ULCC-QMUL/moodle-theme_ulip
+	url = git@github.com:ULCC-QMUL/moodle-theme_ulip
 [submodule "filter/imageopt"]
 	path = filter/imageopt
 	url = git@github.com:/gthomas2/moodle-filter_imageopt
@@ -420,7 +420,7 @@
 	url = git@github.com:/justinhunt/moodle-atto_snippet
 [submodule "lib/editor/atto/plugins/echo360attoplugin"]
 	path = lib/editor/atto/plugins/echo360attoplugin
-	url = git@github.com:/ULCC-QMUL/moodle-editor_atto_echo360attoplugin
+	url = git@github.com:ULCC-QMUL/moodle-editor_atto_echo360attoplugin
 [submodule "local/qmframework"]
 	path = local/qmframework
 	url = git@github.com:ULCC-QMUL/moodle-local_qmframework.git
@@ -588,7 +588,7 @@
 	url = git@github.com:opitz/moodle-format_topics2.git
 [submodule "local/bulkactions"]
 	path = local/bulkactions
-	url = git@github.com:/ULCC-QMUL/moodle-local_bulkactions
+	url = git@github.com:ULCC-QMUL/moodle-local_bulkactions
 [submodule "blocks/xp"]
 	path = blocks/xp
 	url = git@github.com:/FMCorz/moodle-block_xp
@@ -622,3 +622,21 @@
 [submodule "lib/editor/atto/plugins/fullscreen"]
 	path = lib/editor/atto/plugins/fullscreen
 	url = git@github.com:dthies/moodle-atto_fullscreen.git
+[submodule "admin/tool/ally"]
+	path = admin/tool/ally
+	url = git@github.com:blackboard-open-source/moodle-tool_ally.git
+[submodule "blocks/assign_get_feedback"]
+	path = blocks/assign_get_feedback
+	url = git@github.com:ULCC-QMUL/moodle-block_assign_get_feedback.git
+[submodule "filter/ally"]
+	path = filter/ally
+	url = git@github.com:blackboard-open-source/moodle-filter_ally.git
+[submodule "filter/embedquestion"]
+	path = filter/embedquestion
+	url = git@github.com:moodleou/moodle-filter_embedquestion.git
+[submodule "report/allylti"]
+	path = report/allylti
+	url = git@github.com:blackboard-open-source/moodle-report_allylti.git
+[submodule "theme/essential"]
+	path = theme/essential
+	url = git@github.com:gjb2048/moodle-theme_essential.git
