--- a/.gitmodules
+++ b/.gitmodules
@@ -565,3 +565,6 @@
 [submodule "mod/questionnaire"]
 	path = mod/questionnaire
 	url = git@github.com:PoetOS/moodle-mod_questionnaire.git
+[submodule "blocks/qmplus_course_overview"]
+	path = blocks/qmplus_course_overview
+	url = git@github.com:ULCC-QMUL/moodle-block_qmplus_course_overview.git
