--- a/.gitmodules
+++ b/.gitmodules
@@ -571,3 +571,6 @@
 [submodule "question/type/coderunner"]
 	path = question/type/coderunner
 	url = git@github.com:trampgeek/moodle-qtype_coderunner.git
+[submodule "question/behaviour/adapted_for_coderunner"]
+	path = question/behaviour/adapted_for_coderunner
+	url = git@github.com:trampgeek/moodle-qbehaviour_adaptive_adapted_for_coderunner.git
