New plugins mod/attendance - Jira #QMPLUS-271

--- a/.gitmodules
+++ b/.gitmodules
@@ -577,3 +577,6 @@
 [submodule "filter/echo360"]
 	path = filter/echo360
 	url = git@github.com:ULCC-QMUL/moodle-filter_echo360.git
+[submodule "mod/attendance"]
+	path = mod/attendance
+	url = git@github.com:danmarsden/moodle-mod_attendance.git
